--- a/src/css/Picture.css
+++ b/src/css/Picture.css
@@ -5,7 +5,12 @@
   display: flex;
   align-items: center;
   text-align: center;
-  background: #e65100 url('logos-bg.png')
+}
+.year2016 #picture-block {
+  background: #e65100 url('2016/logos-bg.png');
+}
+.year2017 #picture-block {
+  background: #e65100 url('2017/logos-bg.png');
 }
 @media (min-width: 800px) {
   #picture-block {
