Fix language menu links, `position: relative` needed on `.project-table-row`

--- a/src/css/Picture.scss
+++ b/src/css/Picture.scss
@@ -24,12 +24,12 @@
 
 @media (min-width: 650px) {
   .card-introduction {
-    margin-top: -2rem;
+    // margin-top: -2rem;
   }
 }
 @media (min-width: 800px) {
   .card-introduction {
-    margin-top: -3rem;
+    // margin-top: -3rem;
     margin-bottom: 2rem;
     font-size: 1.25rem;
   }
