--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,5 +11,6 @@
 @import "TagCard.scss";
 @import "Header.scss";
 @import "Footer.scss";
-@import "TranslatorSection.scss";
 @import "Graph.scss";
+@import "TranslatorSection.scss";
+@import "_toc.scss";
