--- a/src/css/ProjectTable.scss
+++ b/src/css/ProjectTable.scss
@@ -1,10 +1,10 @@
 .project-table {
-  margin-top: 2rem;
   padding: 0;
 }
 .project-table-row {
   position: relative; // needed because the `.project-table-background` has absolute position
   transition: all 200ms cubic-bezier(0.645, 0.045, 0.355, 1);
+  border-bottom: 1px dashed $light-border-color;
   &:hover {
     background-color: rgba(255, 255, 255, 1);
     .project-table-bar {
@@ -18,7 +18,6 @@
 .project-table-inner {
   display: block;
   color: inherit;
-  border-bottom: 1px dashed $light-border-color;
   position: relative;
   padding: 0.7rem 0.5rem;
   cursor: pointer;
@@ -165,7 +164,7 @@
     // left: -10px;
     // right: -10px;
     // top: -10px;
-    max-height: 999px;
+    max-height: 700px;
     // bottom: -10px;
     opacity: 1;
     z-index: 20;
@@ -205,8 +204,7 @@
 }
 
 .project-details-inner{
-  padding: 20px;
-  
+  padding: 10px 20px 20px 20px;
 }
 
 .project-blurb{
@@ -244,7 +242,7 @@
 
 .project-chart{
   width: 100%;
-  margin: 40px 0 20px 0;
+  margin: 40px 0 15px 0;
   // align-items: flex-end;
 }
 
