--- a/src/css/__to_be_deleted_TagCard.scss
+++ b/src/css/__to_be_deleted_TagCard.scss
@@ -1,3 +1,21 @@
+.section-layout-grid {
+  display: flex;
+  flex-direction: column;
+  @media (min-width: 800px) {
+    flex-direction: row;
+    > div {
+      width: 50%;
+      // flex: 0 0 50%;
+      // max-width: 50%;
+    }
+    .column1 {
+      padding-right: $spacing;
+    }
+    .column2 {
+      padding-left: $spacing;
+    }
+  }
+}
 // .small-card {
 //   padding: 2rem;
 //   background-color: white;
@@ -34,27 +52,37 @@
 .tag-card-body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  // margin: -$spacing 0 0 -$spacing;
+  @media (min-width: 800px) {
+    flex-direction: row;
+    > div {
+      width: 50%;
+      // padding: $spacing 0 0 $spacing;
+      // &:first-child {
+      //   padding-right: $spacing * 2;
+      // }
+      // &:last-child {
+      //   padding-left: $spacing * 2;
+      // }
+    }
+  }
 }
-
 
 .tag-card-graph-container {
   max-width: 500px;
   margin: 0 auto;
 }
 
-.tag-card-column-1{
+.tag-card-column-1 {
   // margin-right: $spacing*2;
 }
 
-.tag-card-column-1, .tag-card-column-2 {
+.tag-card-column-1,
+.tag-card-column-2 {
   // padding-left: 2rem;
   // padding-right: 2rem;
-  // flex: 1;
-  width: 47%;
   // width: calc((100% - #{$spacing*2})/2);
 }
-
 
 .tag-card-column-2 {
   // margin-top: 2rem;
@@ -73,25 +101,23 @@
     // border-top-style: none;
   }
   .tag-card-body {
-    flex-direction: row;
+    // flex-direction: row;
   }
 }
 
-
-
-.tag-card-header{
+.tag-card-header {
   // box-shadow: 10px 10px 0 0 $grey;
-  position: relative;
+  // position: relative;
   font-size: $larger-font;
   border: 1px solid $border-color;
   @include crosshatchBg;
   margin-bottom: $spacing*2;
 }
 
-.tag-card-header-text{
+.tag-card-header-text {
   text-align: center;
   z-index: 10;
-  position: relative;
+  // position: relative;
   padding: $spacing;
   background: $bg-color;
 }
