--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -149,6 +149,17 @@ h1 {
   margin-top: 1.25rem;
 }
 
+.introduction {
+  margin-top: 2rem;
+  padding: 2rem;
+  border: 1px solid $border-color;
+}
+.conclusion {
+  margin: 2rem 0;
+  padding: 2rem;
+  border: 1px solid $border-color;
+}
+
 // Disable the 3 column layout for now
 // .main {
 //   display: flex;
