--- a/src/css/_toc.scss
+++ b/src/css/_toc.scss
@@ -1,20 +1,17 @@
 .nav{
-  position: sticky;
-  top: 0px;
-  padding: $spacing*2 0;
   ul, ol{
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
   li{
-    margin-bottom: $spacing/1.5;
+    margin-bottom: $spacing;
   }
 }
 
 .nav-link{
   white-space: nowrap;
-  font-size: $medium-font;
+  font-size: $large-font;
   margin: 0;
   @include secondary-font;
 }
