--- a/src/css/_project-category.scss
+++ b/src/css/_project-category.scss
@@ -40,16 +40,21 @@
 }
 
 .project-table-row {
+  position: relative;
   display: flex;
   align-items: center;
-  border-bottom: 1px dashed $light-border-color;
   cursor: pointer;
   &:first-child {
     border-top: 1px dashed $light-border-color;
   }
   .ranking {
+    position: absolute;
+    left: -50px;
+    width: 40px;
+    top: 0;
+    bottom: 0;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     color: $lightest-text-color;
     font-size: 1.5rem;
@@ -62,6 +67,7 @@
     min-width: 0;
     position: relative;
     flex-grow: 1;
+    padding: 0 0 0 $spacing/2;
   }
   .icon {
     padding-right: 10px;
@@ -92,7 +98,7 @@
       opacity: 0;
     }
   }
-  &.project-table-row-show-details {
+  &.is-open {
     background: $white;
   }
 }
