Add table of contents

--- a/src/css/_toc.scss
+++ b/src/css/_toc.scss
@@ -1,4 +1,4 @@
-.nav{
+.toc{
   ul, ol{
     list-style-type: none;
     margin: 0;
@@ -7,18 +7,39 @@
   li{
     margin-bottom: $spacing;
   }
+  text-align: center;
 }
 
-.nav-link{
+.toc-link{
+  display: block;
   white-space: nowrap;
-  font-size: $large-font;
-  margin: 0;
+  font-size: $larger-font;
   @include secondary-font;
+  margin-bottom: $spacing/2;
+  border: 1px solid $border-color;
+  padding: $spacing;
+  span{
+    display: block;
+    margin-bottom: $spacing/2;
+  }
+  &:hover{
+    background: rgba(255, 255, 255, 0.5);
+    img{
+      filter: none;
+      opacity: 1;
+    }
+  }
 }
 
-.nav-link-active{
-  @include font-bold;
-  &:before{
-    content: "> ";
-  }  
+.toc-projects{
+  @include flex-center;
+  img{
+    display: block;
+    margin-right: 5px;
+    filter: grayscale(100%);
+    opacity: 0.7;
+    &:last-child{
+      margin: 0;
+    }
+  }
 }
