--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -11,6 +11,10 @@ $mediumgrey: #788080;
 $darkgrey: #344c4c;
 $beige: #fffef0;
 
+$active-color: #cc4700;
+$secondary-color: #cc4700;
+$hover-color: $white;
+
 $text-color: $darkgrey;
 $lighter-text-color: $mediumgrey;
 $lightest-text-color: $grey3;
