--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,6 +14,7 @@
 @import 'Graph.scss';
 @import 'TranslatorSection.scss';
 @import '_toc.scss';
+@import '_newsletter.scss';
 
 @import 'project-category.scss';
 @import 'project-details.scss';
