--- a/src/css/_project-details.scss
+++ b/src/css/_project-details.scss
@@ -39,7 +39,7 @@
       margin-right: 0;
     }
     a,
-    span {
+    > span {
       font-size: $small-font;
       display: block;
       border: 1px solid $light-border-color;
@@ -109,21 +109,21 @@
   text-align: center;
 }
 
-.evan{
+.evan {
   display: flex;
   margin-bottom: $spacing;
   padding: $spacing;
   border: 1px dashed $border-color;
   background: $white;
 }
-.evan-portrait{
+.evan-portrait {
   margin-left: $spacing;
-  img{
+  img {
     max-width: 120px;
   }
 }
-.evan-blurb{
-  h3{
+.evan-blurb {
+  h3 {
     margin-bottom: $spacing/4;
   }
 }
