--- a/src/css/_newsletter.scss
+++ b/src/css/_newsletter.scss
@@ -1,8 +1,9 @@
 
 .newsletter{
-  border-top: 1px solid $border-color;
+  // border-top: 1px solid $border-color;
   // padding: $spacing/2 $spacing/2;
-  margin-top: $spacing;
+  // margin-top: $spacing;
+  margin-bottom: $spacing*2;
   font-size: $medium-font;
   background: rgba(255,255,255,0.5);
   padding: $spacing*1.5;
