--- a/src/css/github.scss
+++ b/src/css/github.scss
@@ -125,7 +125,7 @@
 }
 
 .markdown-body h1 {
-  font-size: 2em;
+  font-size: 1.7rem;
   margin: 0.67em 0;
 }
 
@@ -417,9 +417,9 @@
 }
 
 .markdown-body h1 {
-  padding-bottom: 0.3em;
-  font-size: 2em;
-  border-bottom: 1px solid #eee;
+  // padding-bottom: 0.3em;
+  // font-size: 2em;
+  // border-bottom: 1px solid #eee;
 }
 
 .markdown-body h2 {
