--- a/src/css/Picture.scss
+++ b/src/css/Picture.scss
@@ -1,21 +1,23 @@
 #picture-block {
   width: 100%;
-  height: 12rem;
-  background-color: #e65100;
+  // height: 12rem;
+  // background-color: #e65100;
+  background: $bg-color;
   display: flex;
   align-items: center;
   text-align: center;
+  padding: $spacing *2 0;
 }
 .year2016 #picture-block {
   background: #e65100 url('2016/logos-bg.png');
 }
 .year2017 #picture-block {
-  background: #e65100 url('2017/logos-bg.png');
+  // background: #e65100 url('2017/logos-bg.png');
 }
 @media (min-width: 800px) {
-  #picture-block {
-    height: 300px;
-  }
+  // #picture-block {
+  //   height: 300px;
+  // }
 }
 
 .card-introduction {
