Small tweaks to guest component

--- a/src/css/_project-details.scss
+++ b/src/css/_project-details.scss
@@ -109,21 +109,16 @@
   text-align: center;
 }
 
-.evan {
+.guest {
   display: flex;
   margin-bottom: $spacing;
   padding: $spacing;
   border: 1px dashed $border-color;
   background: $white;
 }
-.evan-portrait {
+.guest-portrait {
   margin-left: $spacing;
   img {
     max-width: 120px;
-  }
-}
-.evan-blurb {
-  h3 {
-    margin-bottom: $spacing/4;
   }
 }
