Add GitHub corner link to the repo

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -4,6 +4,9 @@
   background: #fff;
   z-index: 50;
   height: 60px;
+  position: relative;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
   .container {
     height: 100%;
   }
@@ -44,5 +47,15 @@
   &.is-active {
     background-color: #cc4700;
     color: white;
+  }
+}
+
+#github-corner {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  @media (min-width: 800px) {
+    display: block;
   }
 }
