Add `server.js` icon

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -28,7 +28,7 @@
   flex-grow: 1;
   display: none;
   /* Make the logo smaller on small screens */
-  @media (min-width: 500px) {
+  @media (min-width: 400px) {
     display: block;
     width: 120px;
   }
@@ -44,18 +44,12 @@
   height: 100%;
   display: flex;
   align-items: center;
-  color: $linkColor;
-  &:hover {
-    color: $activeLinkColor;
-  }
   &.is-active {
-    color: $activeLinkColor;
-    border-bottom: 2px solid $activeLinkColor;
-    margin-bottom: -2px;
+    background-color: #cc4700;
+    color: white;
   }
 }
 
-// GitHub corner at the upper right corner, only on big screens
 #github-corner {
   display: none;
   position: absolute;
