Fixing menu links styles, typo and hard-coded text

--- a/src/css/_toc.scss
+++ b/src/css/_toc.scss
@@ -28,7 +28,7 @@
 
 .toc-link {
   display: block;
-  white-space: nowrap;
+  height: 100%;
   font-size: $larger-font;
   @include secondary-font;
   margin-bottom: $spacing/2;
