Add picture used when sharing the Spanish page on social media

--- a/src/components/ProjectIconWall/style.css
+++ b/src/components/ProjectIconWall/style.css
@@ -19,6 +19,9 @@
 [lang='fr'] #wall .text {
   font-size: 3rem;
 }
+[lang='es'] #wall .text {
+  font-size: 3rem;
+}
 .icon-wall-grid {
   display: flex;
   height: 280px;
