Translate i18n/2017/categories/all into ja.

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -4,9 +4,6 @@
   background: #fff;
   z-index: 50;
   height: 60px;
-  position: relative;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12);
   .container {
     height: 100%;
   }
@@ -28,7 +25,7 @@
   flex-grow: 1;
   display: none;
   /* Make the logo smaller on small screens */
-  @media (min-width: 500px) {
+  @media (min-width: 400px) {
     display: block;
     width: 120px;
   }
@@ -44,24 +41,8 @@
   height: 100%;
   display: flex;
   align-items: center;
-  color: $linkColor;
-  &:hover {
-    color: $activeLinkColor;
-  }
   &.is-active {
-    color: $activeLinkColor;
-    border-bottom: 2px solid $activeLinkColor;
-    margin-bottom: -2px;
-  }
-}
-
-// GitHub corner at the upper right corner, only on big screens
-#github-corner {
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 0;
-  @media (min-width: 800px) {
-    display: block;
+    background-color: #cc4700;
+    color: white;
   }
 }
