--- a/src/css/_project-details.scss
+++ b/src/css/_project-details.scss
@@ -1,17 +1,14 @@
 .project-details {
-  /* disable transition for performance reasons */
-  // opacity: 0;
-  // transition: all 200ms cubic-bezier(0.645, 0.045, 0.355, 1);
-  // max-height: 0;
+  max-height: 0;
+  opacity: 0;
+  transition: all 200ms cubic-bezier(0.645, 0.045, 0.355, 1);
   background: $white;
   z-index: 100;
   overflow: hidden;
-  display: none;
   &.is-open {
-    // max-height: 700px;
+    max-height: 700px;
     opacity: 1;
     z-index: 20;
-    display: block;
   }
 }
 
