--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -4,6 +4,9 @@
   background: #fff;
   z-index: 50;
   height: 60px;
+  position: relative;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
   .container {
     height: 100%;
   }
@@ -25,7 +28,7 @@
   flex-grow: 1;
   display: none;
   /* Make the logo smaller on small screens */
-  @media (min-width: 400px) {
+  @media (min-width: 500px) {
     display: block;
     width: 120px;
   }
@@ -41,8 +44,24 @@
   height: 100%;
   display: flex;
   align-items: center;
+  color: $linkColor;
+  &:hover {
+    color: $activeLinkColor;
+  }
   &.is-active {
-    background-color: #cc4700;
-    color: white;
+    color: $activeLinkColor;
+    border-bottom: 2px solid $activeLinkColor;
+    margin-bottom: -2px;
+  }
+}
+
+// GitHub corner at the upper right corner, only on big screens
+#github-corner {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  @media (min-width: 800px) {
+    display: block;
   }
 }
